--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Profile Card</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;600&family=Audiowide&display=swap" rel="stylesheet">
 
- <link rel="stylesheet" href="./style.css">
-
-    
+  <title>Music Player UI</title>
 </head>
-
 <body>
+  <div class="whole">
+    <h1>Music Player</h1>
+    <div class="image">
 
-  <div class="profile-card">
-    <img src="./image.jpeg" alt="Profile" class="profile-img" />
+    </div>
+    <h3>Midnight Vibes</h3>
+    <p>Loges Beats</p>
+    <div class="line">
+      <div class="line1"></div>
+    </div>
 
-    <h2>Logeswaran B</h2>
-    <p class="role">AI & ML Student</p>
-
-    <p class="bio">
-      Passionate about full-stack development, AI, and building clean user interfaces.
-    </p>
-
-    <div class="buttons">
-      <a href="https://github.com/Logeswaran-01"><button class="btn primary">💼</button></a>
-      <a href="https://www.linkedin.com/in/logeswaran123/"><button class="btn primary">😺</button></a>
+    <div class="main-btn">
+      <div class="btn"><span>⏮</span></div>
+      <div class="btn play"><span>▶</span></div>
+      <div class="btn"><span>⏭</span></div>
     </div>
   </div>
-
 </body>
 </html>
